--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,18 @@
-language: node_js
+lannguage: node_js
 node_js:
   - "node"
 
 after_script:
-  - gitbook build
-  - cd ./_book
+  - grunt default
+  - cd ./dist
   - git init
   - git config user.name "${USER_NAME}"
   - git config user.email "${USER_EMAIL}"
-  - cp ../CNAME .
+
   - git add .
-  - git commit -m "publish gitbook"
+  - git commit -m "publish wet site"
   - git push --force --quiet "https://${ACC_TOKEN}@${GH_REF}" master:${BRANCH}
 
 branches:
   only:
-    - master
+    - master 
